--- a/Frontend/Styles/newListingPage.css
+++ b/Frontend/Styles/newListingPage.css
@@ -1,6 +1,7 @@
 /* CSS rules are kept repetitive so that you can get CSS rules for each button easily :) */
 .container {
     display: flex;
+    flex: 1;
 }
 
 /* Full-height left column */
